configs/elk/kibana/kibana-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: elk
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: cloudberry.kibana  # Note, this hostname must resolve via DNS or your /etc/hosts to a node in the cluster. 
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kibana-logging
              port:
                number: 5601
